added tiled renderer and started on pointbirds

--- a/Hot Air Balloon/Hot Air Balloon.vcxproj
+++ b/Hot Air Balloon/Hot Air Balloon.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BirdPoints.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="main.cpp">
@@ -138,11 +139,14 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(SolutionDir)\External\SFML-3.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <ClCompile Include="Resources.cpp" />
+    <ClCompile Include="TiledRender.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BirdPoints.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Resources.h" />
+    <ClInclude Include="TiledRender.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
