made point birds move, spawned enemy hawk, and added reset game function

--- a/Hot Air Balloon/Hot Air Balloon.vcxproj
+++ b/Hot Air Balloon/Hot Air Balloon.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="BirdPoints.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Hawk.cpp" />
     <ClCompile Include="main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(SolutionDir)\External\SFML-3.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(SolutionDir)\External\SFML-3.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -145,6 +146,7 @@
     <ClInclude Include="BirdPoints.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Hawk.h" />
     <ClInclude Include="Resources.h" />
     <ClInclude Include="TiledRender.h" />
   </ItemGroup>
