--- a/Hot Air Balloon/Hot Air Balloon.vcxproj.filters
+++ b/Hot Air Balloon/Hot Air Balloon.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="BirdPoints.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Hawk.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BirdPoints.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Hawk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
