--- a/Hot Air Balloon/Hot Air Balloon.vcxproj
+++ b/Hot Air Balloon/Hot Air Balloon.vcxproj
@@ -138,6 +138,7 @@
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(SolutionDir)\External\SFML-3.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(SolutionDir)\External\SFML-3.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Resources.cpp" />
     <ClCompile Include="TiledRender.cpp" />
   </ItemGroup>
@@ -145,6 +146,7 @@
     <ClInclude Include="BirdPoints.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Hawk.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Resources.h" />
     <ClInclude Include="TiledRender.h" />
   </ItemGroup>
